fixup: change send bar border color in dark mode

--- a/chat/styles.css
+++ b/chat/styles.css
@@ -21,6 +21,7 @@ body {
 }
 .dark #send {
   --shade: 60;
+  border-top-color: white;
 }
 #send input {
 	border: none;
